--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,7 +4,7 @@ ext.versions = [
         buildTools: '28.0.3',
         publishVersion: '0.9.7',
         publishVersionCode: 8,
-        gradlePlugin: '3.2.1',
-
-        supportLib: '28.0.0',
+        gradlePlugin: '3.5.1',
+        appcompat: '1.1.0',
+        recyclerview: '1.0.0',
 ]
