--- a/stickyheadergrid/build.gradle
+++ b/stickyheadergrid/build.gradle
@@ -47,9 +47,8 @@ android {
 }
 
 dependencies {
-    implementation  'com.android.support:support-v13:' + versions.supportLib
-    implementation  'com.android.support:appcompat-v7:' + versions.supportLib
-    implementation  'com.android.support:recyclerview-v7:' + versions.supportLib
+    implementation  'androidx.recyclerview:recyclerview:' + versions.recyclerview
+    implementation  'androidx.recyclerview:recyclerview-selection:' + versions.recyclerview
 }
 
 apply from: '../install.gradle'
